--- a/analysis/DGE.Rmd
+++ b/analysis/DGE.Rmd
@@ -341,6 +341,42 @@ ggarrange(
   common.legend = TRUE
   
 )
+
+# Fig for paper
+# ggarrange( 
+#   cpmPostNorm %>%
+#     t() %>%
+#     prcomp() %>% 
+#     autoplot(data = tibble(sample = rownames(.$x)) %>%
+#                left_join(dge$samples),
+#              colour = "category", 
+#              size =3) +
+#     scale_colour_viridis_d(end = 0.8) +
+#     theme(legend.position = "right", aspect.ratio = 1),
+#   
+#   cpmPostNorm %>%
+#     t() %>%
+#     prcomp() %>% 
+#     autoplot(data = tibble(sample = rownames(.$x)) %>%
+#                left_join(dge$samples),
+#              colour = "sex", 
+#              size = 3) +
+#     scale_colour_viridis_d(end = 0.8, option = "plasma") +
+#     theme(legend.position = "right", aspect.ratio = 1),
+#   
+#   cpmPostNorm %>%
+#     t() %>%
+#     prcomp() %>% 
+#     autoplot(data = tibble(sample = rownames(.$x)) %>%
+#                left_join(dge$samples),
+#              colour = "libraryBatch", 
+#              size = 3) +
+#     scale_colour_viridis_d(end = 0.85, option =  "magma") +
+#     theme(legend.position = "right", aspect.ratio = 1),
+#  common.legend = F, nrow = 1
+# ) +
+#   ggsave("output/PCA.png", width = 20, height = 5, units = "cm", dpi = 200, scale = 1.5)
+
 ```
 
 ## Repeat DGE after cqn
@@ -663,94 +699,134 @@ ggarrange(
 ```
 
 
-<!-- # Manhatten plot to check for chromosome-specific effects -->
+# Manhatten plot to check for chromosome-specific effects
 
-<!-- Next, an assessment was performed to determine whether anything strange going on across chromosomes. No obvious peaks are observed.  -->
+Next, an assessment was performed to determine whether anything strange going on across chromosomes. No obvious peaks are observed.
 
-<!-- ```{r} -->
-<!-- chrst <- toptable.CQN.Fem %>%  -->
-<!--   lapply(function(x) { -->
-<!--     x %>%  -->
-<!--       dplyr::filter(chromosome %in% seq(1:22)) %>%  -->
-<!--       group_by(gene_id) %>%  -->
-<!--       mutate(mid = mean(c(start, end))) %>%  -->
-<!--       ungroup %>%  -->
-<!--       mutate(chromosome = factor(chromosome, levels = seq(1:22)))  %>%  -->
-<!--       group_by(chromosome) %>%  -->
-<!--       summarise(chrLen = max(mid)) %>%  -->
-<!--       mutate(chrSt = cumsum(chrLen)-chrLen) %>%  -->
-<!--       dplyr::select(-chrLen)  -->
-<!--   }) %>%  -->
-<!--   bind_rows() %>%  -->
-<!--   unique -->
+```{r}
+chrst <- toptable.CQN.Fem %>%
+  lapply(function(x) {
+    x %>%
+      dplyr::filter(chromosome %in% seq(1:22)) %>%
+      group_by(gene_id) %>%
+      mutate(mid = mean(c(start, end))) %>%
+      ungroup %>%
+      mutate(chromosome = factor(chromosome, levels = seq(1:22)))  %>%
+      group_by(chromosome) %>%
+      summarise(chrLen = max(mid)) %>%
+      mutate(chrSt = cumsum(chrLen)-chrLen) %>%
+      dplyr::select(-chrLen)
+  }) %>%
+  bind_rows(.id = "coef") %>%
+  unique
 
-<!-- man <- toptable_cqn %>%  -->
-<!--   lapply(function(x) { -->
-<!--     x %>%  -->
-<!--       dplyr::filter(chromosome %in% seq(1:22)) %>%  -->
-<!--       left_join(chrst %>%  -->
-<!--                   mutate(chromosome = factor(chromosome, levels = seq(1:22)))  -->
-<!--       ) %>%  -->
-<!--       group_by(gene_id) %>%  -->
-<!--       mutate(mid = mean(c(start, end))) %>%  -->
-<!--       ungroup %>%  -->
-<!--       dplyr::arrange(mid, chromosome) %>%  -->
-<!--       mutate(midCum = chrSt + mid) -->
-<!--   }) -->
+man <- toptable.CQN.Fem %>%
+  lapply(function(x) {
+    x %>%
+      dplyr::filter(chromosome %in% seq(1:22)) %>%
+      left_join(chrst %>%
+                  mutate(chromosome = factor(chromosome, levels = seq(1:22)))
+      ) %>%
+      group_by(gene_id) %>%
+      mutate(mid = mean(c(start, end))) %>%
+      ungroup %>%
+      dplyr::arrange(mid, chromosome) %>%
+      mutate(midCum = chrSt + mid)
+  })
 
-<!-- axis <-  -->
-<!--   man$female %>% -->
-<!--   mutate(chromosome = factor(chromosome, levels = seq(1:22))) %>%  -->
-<!--   group_by(chromosome) %>% -->
-<!--   dplyr::arrange(chromosome) %>% -->
-<!--   summarize(center = (max(midCum) + min(midCum)) / 2) %>% -->
-<!--   mutate( -->
-<!--     colour = rep(c("grey40", "black"), length.out = 22) -->
-<!--   ) -->
+axis <-
+  man$AD %>%
+  mutate(chromosome = factor(chromosome, levels = seq(1:22))) %>%
+  group_by(chromosome) %>%
+  dplyr::arrange(chromosome) %>%
+  summarize(center = (max(midCum) + min(midCum)) / 2) %>%
+  mutate(
+    colour = rep(c("grey40", "black"), length.out = 22)
+  )
 
-<!-- man %>%  -->
-<!--   bind_rows(.id = "coef") %>%   -->
-<!--   mutate(chromosome = factor(chromosome, levels = seq(1:22))) %>%  -->
-<!--   ggplot(aes(x = midCum, y = logCPM)) + -->
-<!--   theme_bw() + -->
-<!--   geom_point(aes(color=chromosome), alpha = 0.5, size = 1) + -->
-<!--   scale_color_manual(values = axis$colour ) + -->
-<!--   scale_x_continuous(label = axis$chromosome, breaks = axis$center) + -->
-<!--   labs(x = "Chromosome", y = expression(paste(log[2], "CPM"))) + -->
-<!--   facet_wrap(~coef, ncol = 1) + -->
-<!--   geom_text_repel(data = dplyr::filter(bind_rows(man), DE == TRUE), -->
-<!--                   aes(label = gene_name) -->
-<!--   ) + -->
-<!--   theme(  -->
-<!--     legend.position="none", -->
-<!--     panel.border = element_blank(), -->
-<!--     panel.grid.major.x = element_blank(), -->
-<!--     panel.grid.minor.x = element_blank() -->
-<!--   ) + -->
-<!--   ggtitle("No observed biases for gene expression across chromosomes") -->
+man %>%
+  bind_rows(.id = "coef") %>%
+  mutate(chromosome = factor(chromosome, levels = seq(1:22))) %>%
+  ggplot(aes(x = midCum, y = logCPM)) +
+  theme_bw() +
+  geom_point(aes(color=chromosome), alpha = 0.5, size = 1) +
+  scale_color_manual(values = axis$colour ) +
+  scale_x_continuous(label = axis$chromosome, breaks = axis$center) +
+  labs(x = "Chromosome", y = expression(paste(log[2], "CPM"))) +
+  facet_wrap(~coef, ncol = 1) + 
+  theme(
+    legend.position="none",
+    panel.border = element_blank(),
+    panel.grid.major.x = element_blank(),
+    panel.grid.minor.x = element_blank()
+  ) +
+  ggtitle("No observed biases for gene expression across chromosomes")
 
-<!-- man %>%  -->
-<!--   bind_rows(.id = "coef") %>%   -->
-<!--   mutate(chromosome = factor(chromosome, levels = seq(1:22))) %>%  -->
-<!--   ggplot(aes(x = midCum, y = -log10(PValue))) + -->
-<!--   theme_bw() + -->
-<!--   geom_point(aes(color=chromosome), alpha = 0.5, size = 1) + -->
-<!--   scale_color_manual(values = axis$colour ) + -->
-<!--   scale_x_continuous(label = axis$chromosome, breaks = axis$center) + -->
-<!--   labs(x = "Chromosome", y = expression(paste(-log[10], "(p)"))) + -->
-<!--   facet_wrap(~coef, ncol = 1) + -->
-<!--   geom_text_repel(data = dplyr::filter(bind_rows(man), DE == TRUE), -->
-<!--                   aes(label = gene_name) -->
-<!--   ) + -->
-<!--   theme(  -->
-<!--     legend.position="none", -->
-<!--     panel.border = element_blank(), -->
-<!--     panel.grid.major.x = element_blank(), -->
-<!--     panel.grid.minor.x = element_blank() -->
-<!--   )  + -->
-<!--   ggtitle("No observed bias for differential expression across chromosmoes") -->
-<!-- ``` -->
+man %>%
+  bind_rows(.id = "coef") %>%
+  mutate(chromosome = factor(chromosome, levels = seq(1:22))) %>%
+  ggplot(aes(x = midCum, y = -log10(PValue))) +
+  theme_bw() +
+  geom_point(aes(color=chromosome), alpha = 0.5, size = 1) +
+  scale_color_manual(values = axis$colour ) +
+  scale_x_continuous(label = axis$chromosome, breaks = axis$center) +
+  labs(x = "Chromosome", y = expression(paste(-log[10], "(p)"))) +
+  facet_wrap(~coef, ncol = 1) +
+  geom_text_repel(data = dplyr::filter(bind_rows(man), DE == TRUE),
+                  aes(label = gene_name)
+  ) +
+  theme(
+    legend.position="none",
+    panel.border = element_blank(),
+    panel.grid.major.x = element_blank(),
+    panel.grid.minor.x = element_blank()
+  )  +
+  ggtitle("No observed bias for differential expression across chromosmoes")
+```
 
+
+## Assessment of expression of genes on the sex chromosomes 
+```{r}
+logCPM_cqn[(dge$genes %>% 
+  dplyr::filter(chromosome == "X") %>% 
+  .$gene_id),] %>% 
+  as.data.frame() %>% 
+  rownames_to_column("gene_id") %>% 
+  gather(key = "sample", value = "logCPM", colnames(dge)) %>% 
+  left_join(dge$samples) %>% 
+  ggplot(aes(x = sample, y = logCPM)) +
+  geom_violin(aes(fill = category)) +1
+  geom_boxplot(fill = NA, width = 0.2) +
+  facet_wrap(~sex, scales = "free_x") + 
+  easy_rotate_x_labels(angle = -45) +
+  ggtitle("X chromosome genes")
+```
+
+No genes from the Y chromosomes were considered "detectable" in this dataset. So I will have a look at the expression of the Y-chromosme genes before filtering for lowly expressed genes (even though the expression of these genes is not overly accurate)
+
+```{r}
+read_delim("data/confidentialData/counts.out", delim = "\t", skip = 1) %>%
+  set_names(basename(names(.))) %>% 
+  as.data.frame() %>%
+  dplyr::select(-c(Chr, Start, End, Length, Strand)) %>% 
+  as_tibble %>% 
+  column_to_rownames("Geneid") %>% 
+  .[(as_tibble(grGenes) %>% 
+  dplyr::filter(seqnames == "Y") %>% 
+    .$gene_id),] %>% 
+  as.data.frame() %>% 
+  rownames_to_column("gene_id") %>% 
+  gather(key = "sample", value = "logCPM", starts_with(colnames(dge))) %>% 
+  mutate(sample = str_remove(sample, 
+                             pattern = ".Aligned.sortedByCoord.out.bam")) %>% 
+  left_join(dge$samples) %>% 
+  ggplot(aes(x = sample, y = logCPM)) +
+  geom_violin(aes(fill = category)) +
+  geom_boxplot(fill = NA, width = 0.2) +
+  facet_wrap(~sex+sequencingBatch, scales = "free_x") + 
+  easy_rotate_x_labels(angle = -45) +
+  ggtitle("Y chromosome genes")
+```
 
 
 # Conclusion
